<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/account" />

    <item
        android:id="@+id/categoryFragment"
        android:enabled="true"
        android:icon="@drawable/ic_list"
        android:title="@string/category" />


    <item
        android:id="@+id/fragment"
        android:enabled="false"
        android:icon="@drawable/list"
        android:title="" />

    <item
        android:id="@+id/favFragment"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_border_layout"
        android:title="@string/fav" />
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
</menu>