<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:textDirection="rtl">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="ltRCompat">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/login_photo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:gravity="center"
                        android:text="@string/signin"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18sdp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_email"
                        style="@style/DPEditText.Normal"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_mobile"
                        android:paddingTop="@dimen/_15sdp" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etPasswordLayout"
                        style="@style/DPEditText"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:paddingTop="@dimen/_15sdp"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/dp_bg_edittext"
                            android:drawableEnd="@drawable/facebook"
                            android:drawableTintMode="src_in"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textDirection="rtl" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/btn_signin"
                        style="@style/DPButtonStyle"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@drawable/dp_bg_button"
                        android:text="@string/signin" />


                    <TextView
                        android:id="@+id/btn_forget_pass"
                        style="@style/dashLine"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:text="@string/forget_password" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/_10sdp"

                        android:paddingEnd="@dimen/_10sdp"
                        android:weightSum="3">

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_1sdp"
                            android:layout_gravity="center"
                            android:layout_weight=".5"
                            android:background="@color/grey_500" />

                        <TextView
                            style="@style/DPEditTextLabel"
                            android:layout_gravity="center"
                            android:text="@string/or_connect_with"
                            android:textColor="@color/grey_500" />

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_1sdp"
                            android:layout_weight=".5"
                            android:background="@color/grey_500"
                            android:padding="@dimen/_10sdp" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/tv_face"
                        style="@style/DPButtonStyle"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:backgroundTint="@color/dp_fb_blue"
                        android:clickable="true"
                        android:drawableStart="@drawable/facebook"
                        android:drawablePadding="0dp"
                        android:drawableTint="@color/white"
                        android:paddingEnd="40dp"
                        android:text="@string/facebook"
                        android:textSize="@dimen/_8sdp" />

                    <TextView
                        android:id="@+id/tv_google"
                        style="@style/DPButtonStyle"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:backgroundTint="@color/red_500"
                        android:clickable="true"
                        android:drawableStart="@drawable/google"
                        android:drawablePadding="0dp"
                        android:drawableTint="@color/white"
                        android:paddingEnd="40dp"
                        android:text="@string/google"
                        android:textSize="@dimen/_8sdp" />

                    <LinearLayout
                        android:id="@+id/llDoctorLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_30sdp">

                        <TextView
                            style="@style/dashLine"
                            android:text="@string/dont_have_account" />



                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>
    </RelativeLayout>
</layout>